# PyDirect

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
pydirect/: app.py
pydirect/static/: styles.css
pydirect/templates/: admin.html  login.html  settings.html
tests/: pydirect_test.py
